@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "SLSH" "1" "27 November 2018" "" ""
+.TH "SLSH" "1" "19 February 2021" "" ""
 
 .SH NAME
 slsh \- Interpreter for S-Lang scripts
